--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Hank Quinlan, Horrible Cop
 ---
+
+
+<div class="flourish-embed flourish-network" data-src="visualisation/5578234"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 <div class="blurb">
 	<h1>Hi there, I'm Hank Quinlan!</h1>
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/covid19_app">Read more about my life...</a></p>
